# Piptrack

./: .replit  ai_coach.py  animated_sparklines.py  animated_trading_journey.py  app.py  auth_forms.py  background_scanner.py  biotech_catalyst_monitor.py  confidence_scorer.py  cookies.txt  csrf_token.txt  database_optimizer.py  early_detection_watchlist.py  enhanced_journal.py  enhanced_phase1_detector.py  enhanced_pump_detector.py  enhanced_stock_widgets.py  enhanced_volume_analyzer.py  forecasting_engine.py  google_auth.py  google_sheets_integration.py  historical_comparison_engine.py  historical_pump_backtest.py  login_cookies.txt  login_csrf.txt  main.py  market_data_engine.py  models.py  multi_timeframe_analyzer.py  options_flow_monitor.py  pattern_evolution_tracker.py  pdf_generator.py  performance_optimizer.py  personalized_recommender.py  phase1_pump_detector.py  physics_market_engine.py  pump_backtest_analyzer.py  pump_enhancement_roadmap.py  pyproject.toml  reddit_sentiment_monitor.py  (+12 more)
attached_assets/: Pasted--CORE-FEATURES-TO-INCLUDE-1-Stock-Scanner-scanner-html-Pull-top-gappers-or-selected-tickers-us-1749741841174_1749741841174.txt  Pasted--Immersive-Web-Emulator-native-WebXR-API-successfully-overridden-7850-a111fa526e8992f8-js-1-Replit--1749839281516_1749839281517.txt  Pasted--Immersive-Web-Emulator-native-WebXR-API-successfully-overridden-Replit-version-09923d8e-pid2-v-1749837750288_1749837750288.txt  Pasted--Phase-1-High-Impact-Quick-Wins-1-4-weeks-1-Social-Sentiment-Integration-Reddit-WSB-Monitori-1749924403019_1749924403020.txt  (+5 more)
market_cache/: AAPL.pkl  (+216 more)
(+44 files in other folders)
