[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gspread>=6.2.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.0",
    "oauth2client>=4.1.3",
    "pandas>=2.3.0",
    "pdfkit>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "ta>=0.11.0",
    "werkzeug>=3.1.3",
    "yfinance>=0.2.63",
]
