[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gspread>=6.2.1",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "numpy>=2.3.0",
    "oauth2client>=4.1.3",
    "openai>=1.86.0",
    "pandas>=2.3.0",
    "pdfkit>=1.0.0",
    "praw>=7.8.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "sqlalchemy>=2.0.41",
    "ta>=0.11.0",
    "textblob>=0.19.0",
    "trafilatura>=2.0.0",
    "vadersentiment>=3.3.2",
    "werkzeug>=3.1.3",
    "yfinance>=0.2.63",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "flask-dance>=7.1.0",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
]
